feat: getAccount and lookup account
